// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/searchabledropdown should create a dropdown with a search box for 5 options 1`] = `
<Dropdown
  className="msla-searchable-dropdown"
  multiSelect={true}
  onChange={[Function]}
  onDismiss={[Function]}
  onRenderItem={[Function]}
  options={
    Array [
      Object {
        "itemType": 2,
        "key": "FilterHeader",
        "text": "",
      },
      Object {
        "itemType": 1,
        "key": "FilterDivider",
        "text": "-",
      },
      Object {
        "key": "foo",
        "text": "Foo",
      },
      Object {
        "key": "bar",
        "text": "Bar",
      },
      Object {
        "key": "baz",
        "text": "Baz",
      },
      Object {
        "key": "qux",
        "text": "Qux",
      },
      Object {
        "key": "qoz",
        "text": "Qoz",
      },
    ]
  }
  placeholder="Select an option"
  selectedKeys={Array []}
/>
`;

exports[`lib/searchabledropdown should create a dropdown without a search box for 3 options 1`] = `
<Dropdown
  className="msla-searchable-dropdown"
  multiSelect={true}
  onChange={[Function]}
  onDismiss={[Function]}
  onRenderItem={[Function]}
  options={
    Array [
      Object {
        "key": "foo",
        "text": "Foo",
      },
      Object {
        "key": "bar",
        "text": "Bar",
      },
      Object {
        "key": "baz",
        "text": "Baz",
      },
    ]
  }
  placeholder="Select an option"
  selectedKeys={Array []}
/>
`;
